tests/sksl/errors/CanExitWithoutReturningValue.sksl
int foo() { if (2 > 5) return 3; }
